提交Stream改动